# cairm

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  USAGE.md  package-lock.json  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
apps/: project.yml
apps/CairnTests/: AppModelTests.swift  AutoFavoriteBookmarkTests.swift  BookmarkStoreTests.swift  BreadcrumbBarTests.swift  CairnServicesProviderTests.swift  CairnURLRouterTests.swift  ClipboardPasteServiceTests.swift  CommandPaletteModelTests.swift  EmptyStateViewTests.swift  FileListCoordinatorTests.swift  FileListIconCacheTests.swift  FileSystemProviderTests.swift  FolderCompareIntegrationTests.swift  FolderCompareModelTests.swift  FolderCompareTests.swift  FolderModelTests.swift  FolderWatcherLifecycleTests.swift  GitServiceTests.swift  HistoryNavigationInputRouterTests.swift  IndexServiceTests.swift  LastFolderStoreTests.swift  MountObserverTests.swift  Placeholder.swift  PreviewModelTests.swift  RemoteCacheStoreTests.swift  RemoteEditControllerTests.swift  RemoteEditIntegrationTests.swift  RemoteEditSessionTests.swift  RemoteNameResolverTests.swift  RemoteSubtreeSearchIntegrationTests.swift  SearchModelTests.swift  SidebarModelTests.swift  SshFileSystemProviderErrorHandlingTests.swift  SshFileSystemProviderWalkTests.swift  SshPoolServiceInvalidationTests.swift  TabActivationTests.swift  TabTests.swift  UpdaterServiceTests.swift  WindowSceneModelTests.swift
apps/CairnTests/SSH/: HostMetadataStoreTests.swift  SftpProgressPollingTests.swift  SshConfigWriterTests.swift  TransferControllerTests.swift
apps/Sources/: BridgingHeader.h  Cairn.entitlements  CairnApp.swift  ContentView.swift  Info.plist
apps/Sources/App/: AppModel.swift  AppNotifications.swift  CairnResponder.swift  ErrorMessage.swift  HistoryNavigationInputRouter.swift  NavigationHistory.swift  Tab.swift  WindowDualPaneModel.swift  WindowSceneModel.swift
apps/Sources/Services/: BookmarkStore.swift  CairnEngine+Search.swift  CairnEngine.swift  CairnServicesProvider.swift  CairnURLRouter.swift  ClipboardPasteService.swift  ConfigFileWatcher.swift  FSPath.swift  FileListIconCache.swift  FileSystemProvider.swift  FolderCompare.swift  FolderWatcher.swift  GitService.swift  HostKeyAlertResolver.swift  HostMetadataStore.swift  IndexService.swift  KeychainPassphraseStore.swift  KeychainPasswordStore.swift  LastFolderStore.swift  LocalFileSystemProvider.swift  MountObserver.swift  PassphraseResolver.swift  PasswordResolver.swift  RemoteCacheStore.swift  RemoteEditController.swift  RemoteEditSession.swift  RemoteNameResolver.swift  SettingsStore.swift  SshConfigService.swift  SshConfigWriter.swift  SshFileSystemProvider.swift  SshPoolService.swift  TransferController.swift  TransferJob.swift  UpdaterService.swift
apps/Sources/Theme/: CairnTheme.swift
apps/Sources/ViewModels/: CommandPaletteModel.swift  FolderCompareModel.swift  FolderModel+Sort.swift  FolderModel.swift  PreviewModel.swift  SearchModel.swift  SidebarModel.swift
apps/Sources/Views/: BreadcrumbBar.swift  PaneColumn.swift  VisualEffectBlur.swift  WindowAccessor.swift
cli/: cairn
crates/cairn-core/: Cargo.toml
crates/cairn-core/src/: lib.rs
crates/cairn-ffi/: Cargo.toml  build.rs
crates/cairn-ffi/src/: git.rs  index.rs  lib.rs  ssh.rs
crates/cairn-git/: Cargo.toml
crates/cairn-git/src/: lib.rs  snapshot.rs
crates/cairn-index/: Cargo.toml
crates/cairn-index/src/: content.rs  fuzzy.rs  lib.rs  store.rs  symbols.rs  walker.rs  watch.rs
crates/cairn-preview/: Cargo.toml
crates/cairn-preview/src/: lib.rs
crates/cairn-search/: Cargo.toml
crates/cairn-search/src/: lib.rs  session.rs
crates/cairn-search/tests/: integration.rs
crates/cairn-ssh/: Cargo.toml
crates/cairn-ssh/src/: auth.rs  config.rs  error.rs  hostkey.rs  known_hosts_hash.rs  lib.rs  pool.rs  proxy.rs  sftp.rs  transfer.rs  types.rs
crates/cairn-ssh/tests/: config_parse_test.rs  hostkey_fingerprint_test.rs  known_hosts_test.rs  pool_test.rs  proxy_command_test.rs  sftp_walk_tests.rs
crates/cairn-ssh/tests/integration/: mod.rs  sftp_roundtrip.rs
crates/cairn-walker/: Cargo.toml
crates/cairn-walker/src/: lib.rs
crates/cairn-walker/tests/: walker_test.rs
docs/: RELEASE.md  USAGE.md
docs/superpowers/plans/: 2026-04-21-cairn-phase-0-foundation.md  2026-04-21-cairn-phase-1-m1.1-walker-foundation.md  2026-04-21-cairn-phase-1-m1.2-nstableview.md  2026-04-21-cairn-phase-1-m1.3-sidebar-landing.md  2026-04-21-cairn-phase-1-m1.4-preview.md  2026-04-21-cairn-phase-1-m1.5-theme-context-menu.md  2026-04-21-cairn-phase-1-m1.6-search-polish.md  2026-04-22-cairn-app-icon.md  2026-04-22-cairn-hotfix-nav-ux.md  2026-04-22-cairn-paste-screenshot.md  2026-04-22-cairn-phase-1-m1.7-design-polish.md  2026-04-22-cairn-phase-1-m1.8-unified.md  2026-04-22-cairn-phase1-ux-pass.md  2026-04-23-cairn-ssh-v1.md  2026-04-23-codex-adversarial-review-fixes.md  2026-04-23-ssh-transfer-progress-and-throughput.md  2026-04-23-tab-switching-performance.md  2026-04-23-tcc-permission-dialog-fix.md  2026-04-24-cairn-dual-pane-compare-sync.md  2026-04-24-cairn-finder-integration.md  2026-04-24-cairn-release-distribution.md  2026-04-24-cairn-remote-edit-in-place.md  2026-04-24-cairn-remote-subtree-search.md
docs/superpowers/specs/: 2026-04-21-cairn-design.md  (+10 more)
scripts/: build-rust.sh  gen-bindings.sh  make-dmg.sh  notarize.sh  release.sh  render-icon.sh  sparkle-appcast.sh
(+31 files in other folders)
