[workspace]
resolver = "2"
members = [
    "crates/cairn-core",
    "crates/cairn-walker",
    "crates/cairn-search",
    "crates/cairn-preview",
    "crates/cairn-index",
    "crates/cairn-ffi",
    "crates/cairn-git",
    "crates/cairn-ssh",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
authors = ["ongjin"]
license = "MIT"
repository = "https://github.com/ongjin/cairn"

[workspace.dependencies]
# Phase 0에선 거의 안 쓰임. Phase 1+에서 채워진다.
# 여기 등록된 의존성은 하위 크레이트에서 `workspace = true`로 참조.
anyhow = "1"
thiserror = "1"
russh       = "0.44"
russh-sftp  = "2.0"
russh-keys  = "0.44"
sha2        = "0.10"
parking_lot = "0.12"
tracing     = "0.1"
tokio       = { version = "1", features = ["full"] }
futures     = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
