[package]
name = "cairn-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# cdylib: Swift dynamic linking. staticlib: universal static 링크 (Xcode가 선호).
# 둘 다 만들어두면 상황별로 골라 쓸 수 있다. Phase 0은 staticlib 사용.
crate-type = ["staticlib", "rlib"]
name = "cairn_ffi"

[dependencies]
cairn-core = { path = "../cairn-core" }
cairn-walker = { path = "../cairn-walker" }
cairn-preview = { path = "../cairn-preview" }
swift-bridge = "0.1"

[build-dependencies]
swift-bridge-build = "0.1"
