[package]
name = "cairn-index"
version = "0.1.0"
edition = "2021"

[lib]
name = "cairn_index"
path = "src/lib.rs"

[dependencies]
redb = "2"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
dirs = "5"
hex = "0.4"
thiserror = "1"
cairn-git = { path = "../cairn-git" }
walkdir = "2"
nucleo-matcher = "0.3"
tree-sitter = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
streaming-iterator = "0.1"
serde_json = "1"
notify = "6"
notify-debouncer-mini = "0.4"

[dev-dependencies]
tempfile = "3"
