[package]
name = "cairn-ssh"
version.workspace = true
edition.workspace = true

[lib]
name = "cairn_ssh"
path = "src/lib.rs"

[dependencies]
russh       = { workspace = true }
russh-sftp  = { workspace = true }
russh-keys  = { workspace = true }
tokio       = { workspace = true }
sha2        = { workspace = true }
parking_lot = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
