[package]
name = "cairn-ssh"
version.workspace = true
edition.workspace = true

[lib]
name = "cairn_ssh"
path = "src/lib.rs"

[dependencies]
russh       = { workspace = true }
russh-sftp  = { workspace = true }
russh-keys  = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }
sha2        = { workspace = true }
parking_lot = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
hmac        = "0.12"
base64      = "0.22"
async-trait = "0.1"
sha1        = "0.10"
rand        = "0.8"

[features]
integration = []

[dev-dependencies]
tokio    = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
sha1     = "0.10"
